Adjusted code and Springboot